utilities/Sol/modules/grammars/ide/src/test/resources/cocos/valid/RequiredAttributesModule.ide
package valid

typedef module RequiredAttributesModule {
    label "Some Module"
}
