utilities/Sol/modules/grammars/ide/src/test/resources/cocos/invalid/NameFormatModuleType.ide
package invalid

typedef module nameFormatModuleType {
    label "Some nice Module Type"
}
